--- a/products.html
+++ b/products.html
@@ -17,20 +17,56 @@
     </nav>
   </header>
   <main>
-    <div class="product-grid">
-      <div class="product-card">
-        <img src="https://via.placeholder.com/150" alt="Product 1"/>
-        <h3>Bananas</h3>
-        <p>$1.50/lb</p>
-        <a href="product.html">View</a>
-      </div>
-      <div class="product-card">
-        <img src="https://via.placeholder.com/150" alt="Tomatoes"/>
-        <h3>Tomatoes</h3>
-        <p>$2.00/lb</p>
-        <a href="product.html">View</a>
-      </div>
-    </div>
+  <div class="product-grid">
+  <div class="product-card">
+    <img src="https://cdn.pixabay.com/photo/2018/05/13/20/18/bananas-3399017_960_720.jpg" alt="Bananas"/>
+    <h3>Bananas</h3>
+    <p>$1.50/lb</p>
+    <a href="product.html">View</a>
+  </div>
+  <div class="product-card">
+    <img src="https://cdn.pixabay.com/photo/2015/06/10/21/42/tomatoes-804819_960_720.jpg" alt="Tomatoes"/>
+    <h3>Tomatoes</h3>
+    <p>$2.00/lb</p>
+    <a href="product.html">View</a>
+  </div>
+  <div class="product-card">
+    <img src="https://cdn.pixabay.com/photo/2014/12/21/23/28/apple-575771_960_720.png" alt="Apples"/>
+    <h3>Apples</h3>
+    <p>$2.50/lb</p>
+    <a href="product.html">View</a>
+  </div>
+  <div class="product-card">
+    <img src="https://cdn.pixabay.com/photo/2016/03/05/19/02/oranges-1239424_960_720.jpg" alt="Oranges"/>
+    <h3>Oranges</h3>
+    <p>$1.80/lb</p>
+    <a href="product.html">View</a>
+  </div>
+  <div class="product-card">
+    <img src="https://cdn.pixabay.com/photo/2017/01/20/15/06/grapes-1995057_960_720.jpg" alt="Grapes"/>
+    <h3>Grapes</h3>
+    <p>$3.00/lb</p>
+    <a href="product.html">View</a>
+  </div>
+  <div class="product-card">
+    <img src="https://cdn.pixabay.com/photo/2014/02/01/17/28/strawberries-256407_960_720.jpg" alt="Strawberries"/>
+    <h3>Strawberries</h3>
+    <p>$3.50/lb</p>
+    <a href="product.html">View</a>
+  </div>
+  <div class="product-card">
+    <img src="https://cdn.pixabay.com/photo/2016/08/16/15/30/peach-1593310_960_720.jpg" alt="Peaches"/>
+    <h3>Peaches</h3>
+    <p>$2.20/lb</p>
+    <a href="product.html">View</a>
+  </div>
+  <div class="product-card">
+    <img src="https://cdn.pixabay.com/photo/2015/03/24/08/54/pineapple-686563_960_720.jpg" alt="Pineapple"/>
+    <h3>Pineapple</h3>
+    <p>$2.75/each</p>
+    <a href="product.html">View</a>
+  </div>
+</div>
   </main>
 </body>
 </html>
