--- a/products.html
+++ b/products.html
@@ -66,6 +66,18 @@
     <p>$2.75/each</p>
     <a href="product.html">View</a>
   </div>
+      <div class="product-card">
+    <img src="https://cdn.pixabay.com/photo/2018/05/31/20/24/mango-3440161_960_720.jpg" alt="Mangoes"/>
+    <h3>Mangoes</h3>
+    <p>$2.90/lb</p>
+    <a href="product.html">View</a>
+  </div>
+  <div class="product-card">
+    <img src="https://cdn.pixabay.com/photo/2016/11/21/15/47/watermelon-1841100_960_720.jpg" alt="Watermelon"/>
+    <h3>Watermelon</h3>
+    <p>$4.00/each</p>
+    <a href="product.html">View</a>
+  </div>
 </div>
   </main>
 </body>
